TINY-10046: menu items will no longer overflow the menu containing them.

--- a/modules/oxide/src/less/theme/components/collection/collection.less
+++ b/modules/oxide/src/less/theme/components/collection/collection.less
@@ -193,6 +193,7 @@
     font-style: @collection-item-label-font-style;
     font-weight: @collection-item-label-font-weight;
     line-height: @collection-item-list-icon-height;
+    max-width: 100%;
     text-transform: @collection-item-label-text-transform;
     word-break: break-all;
   }
